[project]
name = "ytl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "langchain>=1.0,<2",
    "langchain-community>=0.4",
    "langchain-openai>=1.0",
    "langchain-chroma>=0.1.4",
    "langchain-text-splitters>=1.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0",
]
